CH update 2022-05-06 deprecation of oracle terminology
All uses of the term oracle have been edited out, and the paper title has changed accordingly

--- a/document/ieee_trans/asr_ieeetrans.tex
+++ b/document/ieee_trans/asr_ieeetrans.tex
@@ -40,7 +40,7 @@
 % ***************************************************
 %  TITLE
 % ***************************************************
-\title{Safety Validation of Autonomous Vehicles using Assertion-based Oracles}
+\title{Safety Validation of Autonomous Vehicles using Assertion Checking}
 
 \author{Chris Harper, Greg Chance, Abanoub Ghobrial, Saquib Alam, Tony Pipe, Kerstin Eder
 \thanks{{\footnotesize
